@@ -25,7 +25,7 @@ GBFHTML::GBFHTML()
 }
 
 
-char GBFHTML::ProcessText(char *text, int maxlen)
+char GBFHTML::ProcessText(char *text, int maxlen, const SWKey *key)
 {
 	char *to, *from, token[2048];
 	int tokpos = 0;
