@@ -14,7 +14,7 @@ GBFPlain::GBFPlain() {
 }
 
 
-char GBFPlain::ProcessText(char *text, int maxlen)
+char GBFPlain::ProcessText(char *text, int maxlen, const SWKey *key)
 {
 	char *to, *from, token[2048];
 	int tokpos = 0;
